Fix offer service