@@ -101,6 +101,8 @@ public class OfferServiceImpl implements OfferService {
                 .collect(Collectors.toList());
     }
 //----------------------------------------------------------------------------------------------------------------------
+//    Business
+
     @Override
     public List<OffersDemoViewModel> getAllOffers() {
 
@@ -122,38 +124,92 @@ public class OfferServiceImpl implements OfferService {
         }
         return allOffersDemoViewModel;
     }
-//----------------------------------------------------------------------------------------------------------------------
-//  ПЕРЕДЕЛАТЬ ПО ПРИМЕРУ ВЫШЕ
+
     @Override
     public List<OffersDemoViewModel> getAllOffersByMileageLowerThan(int mileage) {
-        return offerRepository.findAllByMileageLessThan(mileage)
+
+        List<OfferDTO> allOffersByMileageDtoList = offerRepository.findAllByMileageLessThan(mileage)
                 .stream()
-                .map(offer -> modelMapper.map(offer, OffersDemoViewModel.class))
-                .collect(Collectors.toList());
+                .map(offer -> modelMapper.map(offer, OfferDTO.class))
+                .toList();
+
+        List<OffersDemoViewModel> allOffersDemoViewModel = new ArrayList<>();
+
+        for (OfferDTO offerDto : allOffersByMileageDtoList) {
+
+            OffersDemoViewModel offerDemoView = modelMapper.map(offerDto, OffersDemoViewModel.class);
+
+            offerDemoView.setModel(offerDto.getModel().getName());
+            offerDemoView.setBrand(offerDto.getModel().getBrand().getName());
+            offerDemoView.setSeller(offerDto.getSeller().getUsername());
+            allOffersDemoViewModel.add(offerDemoView);
+        }
+        return allOffersDemoViewModel;
     }
 
     @Override
     public List<OffersDemoViewModel> getAllOffersByPriceLowerThan(BigDecimal price) {
-        return offerRepository.findAllByPriceLessThan(price)
+        List<OfferDTO> allOffersByPriceDtoList = offerRepository.findAllByPriceLessThan(price)
                 .stream()
-                .map(offer -> modelMapper.map(offer, OffersDemoViewModel.class))
-                .collect(Collectors.toList());
+                .map(offer -> modelMapper.map(offer, OfferDTO.class))
+                .toList();
+
+        List<OffersDemoViewModel> allOffersDemoViewModel = new ArrayList<>();
+
+        for (OfferDTO offerDto : allOffersByPriceDtoList) {
+
+            OffersDemoViewModel offerDemoView = modelMapper.map(offerDto, OffersDemoViewModel.class);
+
+            offerDemoView.setModel(offerDto.getModel().getName());
+            offerDemoView.setBrand(offerDto.getModel().getBrand().getName());
+            offerDemoView.setSeller(offerDto.getSeller().getUsername());
+            allOffersDemoViewModel.add(offerDemoView);
+        }
+        return allOffersDemoViewModel;
     }
 
     @Override
     public List<OffersDemoViewModel> getAllOffersByEngineType(String engineType) {
-        return offerRepository.findAllByEngineType(EngineTypeEnum.valueOf(engineType.toUpperCase()))
+
+        List<OfferDTO> allOffersByEngineDtoList = offerRepository.findAllByEngineType(EngineTypeEnum.valueOf(engineType.toUpperCase()))
                 .stream()
-                .map(offer -> modelMapper.map(offer, OffersDemoViewModel.class))
-                .collect(Collectors.toList());
+                .map(offer -> modelMapper.map(offer, OfferDTO.class))
+                .toList();
+
+        List<OffersDemoViewModel> allOffersDemoViewModel = new ArrayList<>();
+
+        for (OfferDTO offerDto : allOffersByEngineDtoList) {
+
+            OffersDemoViewModel offerDemoView = modelMapper.map(offerDto, OffersDemoViewModel.class);
+
+            offerDemoView.setModel(offerDto.getModel().getName());
+            offerDemoView.setBrand(offerDto.getModel().getBrand().getName());
+            offerDemoView.setSeller(offerDto.getSeller().getUsername());
+            allOffersDemoViewModel.add(offerDemoView);
+        }
+        return allOffersDemoViewModel;
     }
 
     @Override
     public List<OffersDemoViewModel> getAllOffersByTransmissionType(String transmissionType) {
-        return offerRepository.findAllByTransmissionType(TransmissionTypeEnum.valueOf(transmissionType.toUpperCase()))
+
+        List<OfferDTO> allOffersByTransmissionDtoList = offerRepository.findAllByTransmissionType(TransmissionTypeEnum.valueOf(transmissionType.toUpperCase()))
                 .stream()
-                .map(offer -> modelMapper.map(offer, OffersDemoViewModel.class))
-                .collect(Collectors.toList());
+                .map(offer -> modelMapper.map(offer, OfferDTO.class))
+                .toList();
+
+        List<OffersDemoViewModel> allOffersDemoViewModel = new ArrayList<>();
+
+        for (OfferDTO offerDto : allOffersByTransmissionDtoList) {
+
+            OffersDemoViewModel offerDemoView = modelMapper.map(offerDto, OffersDemoViewModel.class);
+
+            offerDemoView.setModel(offerDto.getModel().getName());
+            offerDemoView.setBrand(offerDto.getModel().getBrand().getName());
+            offerDemoView.setSeller(offerDto.getSeller().getUsername());
+            allOffersDemoViewModel.add(offerDemoView);
+        }
+        return allOffersDemoViewModel;
     }
 
     @Override
@@ -168,5 +224,4 @@ public class OfferServiceImpl implements OfferService {
         newOfferModel.setEngineType(EngineTypeEnum.valueOf(newOffer.getEngineType().toUpperCase()));
         offerRepository.saveAndFlush(newOfferModel);
     }
-
 }
